[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.setup]
name = "pipy-awc"
version = "0.7.3"
description = "PiPy Automatic-Water Controller"
long_description = """
A dynamically-configurable & automated aquarium water level controller for the Raspberry Pi using Python. Intended to run using mechanical voltage relays (i.e. Waveshare Relay Hat) and optical contact liquid sensors (i.e. from DFRobot/CQRObot)
"""
author = "Neil Kuehnle"
author_email = "nkuehnle1191@gmail.com"
license = "GPLv2"
url = "https://github.com/nkuehnle/PiPyAWC"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
keywords = ["Raspberry Pi", "Aquarium", "Automation", "AWC", "RPi"]
packages = ["pipy-awc"]  # Replace with the actual package name
python_requires = "~=3.7"

[tool.setuptools.install_requires]
pandas = ">=1.3"
pyaml = ">=21.10"
schedule = ">=1.1.0"
gpiozero = ">=1.6.2"
imap-tools = "0.55.0"
